Fixing footer on mobile

--- a/style.css
+++ b/style.css
@@ -132,6 +132,7 @@ html {
     /* margin-right: 3rem;  */
     /* margin-left: 3rem; */
     color: #875773 ;
+    text-align: center;
 }
 
 .footer a{
@@ -199,6 +200,10 @@ html {
     }
     #retry {
         font-size: 20px;
+    }
+
+    .footer{
+        font-size: 10px;
     }
 
 }
